<resources>
    <string name="app_name">StoryAppV2</string>
    <string name="til_email">E-mail</string>
    <string name="til_pass">Password</string>
    <string name="bt_sign_in">Sign In</string>
    <string name="bt_register">Register</string>
    <string name="til_name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Map Stories</string>
    <string name="title_notifications">Profile</string>
    <string name="un">User Name</string>
    <string name="content">Content Description</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo ultricies bibendum. Etiam pellentesque feugiat sem feugiat euismod. Quisque sed tempus justo, eget placerat eros. Morbi luctus fermentum risus. Suspendisse at rhoncus justo. Maecenas eget dolor accumsan felis tristique gravida non sed lorem. Ut ipsum lectus, bibendum eget imperdiet nec, aliquam eget ante. Fusce non quam tortor. Nulla tincidunt erat eros, vitae feugiat elit porttitor a. Nam quam odio, dictum sed laoreet vel, faucibus vel sem. Vivamus pretium facilisis metus, nec dictum odio ornare sed. Vestibulum euismod ornare nunc, at porta odio hendrerit sit amet. Etiam accumsan blandit sollicitudin. Suspendisse non massa et orci pretium venenatis. Nunc vel ullamcorper eros, vel euismod augue. Curabitur vehicula justo justo, et congue diam commodo id.</string>
    <string name="date">20 Mei 2022</string>
    <string name="log_out">Log Out</string>
    <string name="add_stories">Add Stories</string>
    <string name="tv_img">Let\'s Start with a Picture, shall we?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Care to share your mind?</string>
    <string name="desc_desc">Sorry, it\'s actually mandatory</string>
    <string name="bt_upload">Upload your Stories!</string>
    <string name="camerax">CameraX</string>
    <string name="delay">2000</string>
    <string name="pass_req">Password is less than 6 characters</string>
    <string name="email_req">Invalid Email Format</string>
    <string name="up_desc">Just a little bit is fine</string>
    <string name="retry">Retry</string>
    <string name="email_should_be_right">Email should be in the right format</string>
    <string name="password_should_at_least_have_6_letters">Password should at least have 6 letters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="til_user">User</string>
    <string name="til_about">About</string>
    <string name="bt_favorite">Logout</string>
    <string name="my_story_coming_soon">My Story (Coming Soon)</string>
    <string name="bt_join">Join Us!</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="about_name">Application Name</string>
    <string name="t_appname">: StoryApp</string>
    <string name="about_version">Application Version</string>
    <string name="t_version">: Version 3.7.1</string>
    <string name="about_by">Made By</string>
    <string name="t_by">: Ipoy</string>
    <string name="about_update">Last Updated</string>
    <string name="t_update">: 24 May 2023</string>
    <string name="about_develop">Development Since</string>
    <string name="about_developdate">: 13 April 2023</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="have_account">Already have account?</string>
    <string name="share_location">Bagikan lokasi</string>
    <string name="location_permission_denied">Izin lokasi ditolak</string>
    <string name="location_permission_denied_action">Ubah pengaturan</string>
    <string name="please_activate_location_message">Tolong aktifkan layanan lokasi</string>
</resources>