<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/gl_0"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_mcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/bg_mcv"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_1"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_baseline_person_24"
                />

            <TextView
                android:id="@+id/til_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/til_name"
                app:layout_constraintStart_toStartOf="@id/gl_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/til_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/til_user"
                app:layout_constraintStart_toStartOf="@id/gl_1"
                app:layout_constraintTop_toBottomOf="@+id/til_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:textSize="25sp"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="218dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/mcv_user"
        android:text="@string/til_about"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_about"
        android:text="@string/bt_join"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:background="@color/red_error"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/bt_join"
        android:text="@string/bt_favorite"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>