<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_story"
                android:transitionName="photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_min="400dp"
                app:layout_constraintHeight_max="600dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/jm"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/tv_name"
                android:transitionName="name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/img_story"
                tools:text="@string/un"
                android:textSize="25sp"
                android:textStyle="bold"
                android:contentDescription="@string/un"
                />
            <TextView
                android:id="@+id/tv_desc"
                android:transitionName="desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="@string/content"
                android:maxLines="3"
                android:ellipsize="end"
                android:textSize="20sp"
                android:contentDescription="@string/content"
                />
            <TextView
                android:id="@+id/tv_date"
                android:transitionName="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                tools:text="@string/date"
                android:textSize="17sp"
                android:contentDescription="@string/date"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>